# fjalar_flight_controller

./: cube.ioc  euroc_controller.kicad_pcb  euroc_controller.kicad_pro  pyros.kicad_sch  readme.md  sym-lib-table
design/: cube.ioc  cube2.ioc  cube3.ioc  euroc_controller.csv  euroc_controller.kicad_pcb  euroc_controller.kicad_prl  euroc_controller.kicad_pro  euroc_controller.kicad_sch  euroc_controller.xml  fp-info-cache  fp-lib-table  pyros.kicad_sch  sym-lib-table
design/bom/: ibom.html
design/gerbers/: euroc_controller-B_Cu.gbl  euroc_controller-B_Mask.gbs  euroc_controller-B_Paste.gbp  euroc_controller-B_Silkscreen.gbo  euroc_controller-Edge_Cuts.gm1  euroc_controller-F_Cu.gtl  euroc_controller-F_Mask.gts  euroc_controller-F_Paste.gtp  euroc_controller-F_Silkscreen.gto  (+6 more)
firmware/application/: CMakeLists.txt  Kconfig  app.overlay  fjalar.overlay  prj.conf  west.yml
firmware/application/boards/: fjalar.conf  native_posix_64.conf
firmware/application/boards/arm/fjalar/: fjalar.dts  fjalar.dtsi
firmware/application/lib/: CMakeLists.txt
firmware/application/lib/protobuf/: CMakeLists.txt  schema.pb.c  schema.pb.h  schema.proto
firmware/application/modules/dummysensor/drivers/sensor/dummysensor/: Kconfig  dummysensor.c
firmware/application/modules/dummysensor/drivers/sensor/dummysensor/data/iclr/: converter.py
firmware/application/src/: actuation.c  filter.c  filter.h  fjalar.h  flight_state.c  main.c  sensors.c  telecommand.c  telecommand.h  telemetry.c  telemetry.h
lib/: LQFP-48.kicad_mod  SOIC127P600X175-8N.kicad_mod  SOIC_050ASTR_STM.kicad_mod
(+21 files in other folders)
